Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108183

Crash triggered by assertion in QTextDocumentLayout

XMLWordPrintable

    • Linux/X11
    • 84a68ef75 (dev), f6911de0e (6.5), f6e3ea4f7 (6.4)

      Consider the attached example: When resizing the Window the application eventually segfaults:

      Assert: In "/local/makefactory/product_qt6-Fcu7SBRd/qt6/src/qtbase/include/QtCore/../../src/corelib/global/qglobal.h", line 1032: 
          ASSERT: "!(max < min)" in file /local/makefactory/product_qt6-Fcu7SBRd/qt6/src/qtbase/include/QtCore/../../src/corelib/global/qglobal.h, line 1032 
          Please report this problem to our support. 
          Program: test-min-width, Release: 22.10i, Build: 11790235, Tag: master 
           
          Backtrace (please include this in your support request): 
           0# Ur::MessageHandler::print(Ur::Message&) in ./test-min-width 
           1# void Ur::printf<Ur::Location, char const*>(unsigned long long, Ur::Location const&, char const*, char const* const&) in ./test-min-width 
           2# 0x0000560AF7BFC8CB in ./test-min-width 
           3# 0x00007FD8D1C5277E in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Core.so.6 
           4# 0x00007FD8D1C4E86C in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Core.so.6 
           5# QMessageLogger::fatal(char const*, ...) const in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Core.so.6 
           6# qt_assert_x(char const*, char const*, char const*, int) in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Core.so.6 
           7# 0x00007FD8D29AA219 in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Gui.so.6 
           8# 0x00007FD8D29AC218 in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Gui.so.6 
           9# 0x00007FD8D29AB8A7 in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Gui.so.6 
          10# 0x00007FD8D29A5528 in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Gui.so.6 
          11# 0x00007FD8D29AC53A in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Gui.so.6 
          12# 0x00007FD8D29AB8A7 in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Gui.so.6 
          13# QTextDocumentLayout::doLayout(int, int, int) in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Gui.so.6 
          14# QTextDocumentLayout::documentChanged(int, int, int) in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Gui.so.6 
          15# 0x00007FD8D3366122 in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Widgets.so.6 
          16# QTextEdit::resizeEvent(QResizeEvent*) in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Widgets.so.6 
          17# QWidget::event(QEvent*) in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Widgets.so.6 
          18# QFrame::event(QEvent*) in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Widgets.so.6 
          19# QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Core.so.6 
          20# QApplicationPrivate::notify_helper(QObject*, QEvent*) in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Widgets.so.6 
          21# QApplication::notify(QObject*, QEvent*) in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Widgets.so.6 
          22# QCoreApplication::notifyInternal2(QObject*, QEvent*) in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Core.so.6 
          23# QWidgetPrivate::setGeometry_sys(int, int, int, int, bool) in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Widgets.so.6 
          24# QWidget::setGeometry(QRect const&) in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Widgets.so.6 
          25# 0x00007FD8D3234CCD in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Widgets.so.6 
          26# 0x00007FD8D323433E in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Widgets.so.6 
          27# QAbstractScrollArea::event(QEvent*) in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Widgets.so.6 
          28# QTextEdit::event(QEvent*) in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Widgets.so.6 
          29# QApplicationPrivate::notify_helper(QObject*, QEvent*) in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Widgets.so.6 
          30# QApplication::notify(QObject*, QEvent*) in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Widgets.so.6 
          31# QCoreApplication::notifyInternal2(QObject*, QEvent*) in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Core.so.6 
          32# 0x00007FD8D31BFCCE in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Widgets.so.6 
          33# 0x00007FD8D31BDDF2 in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Widgets.so.6 
          34# QApplicationPrivate::notify_helper(QObject*, QEvent*) in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Widgets.so.6 
          35# QApplication::notify(QObject*, QEvent*) in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Widgets.so.6 
          36# QCoreApplication::notifyInternal2(QObject*, QEvent*) in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Core.so.6 
          37# QGuiApplicationPrivate::processGeometryChangeEvent(QWindowSystemInterfacePrivate::GeometryChangeEvent*) in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Gui.so.6 
          38# QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Gui.so.6 
          39# 0x00007FD8CEE9A8D9 in /local/ssd/mlangen/build/a3gui.default/usr/plugins/platforms/../../lib/libQt6XcbQpa.so.6 
          40# QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Core.so.6 
          41# QCoreApplication::exec() in /local/ssd/mlangen/build/a3gui.default/usr/lib/libQt6Core.so.6 
          42# main in ./test-min-width 
          43# 0x00007FD8CFA3C290 in /usr/lib/libc.so.6 
          44# __libc_start_main in /usr/lib/libc.so.6 
          45# _start in ./test-min-width

        1. min-width.cpp
          0.9 kB
        2. index.html
          2 kB
        3. minwidth.png
          minwidth.png
          5 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            mlangen Marc Langenbach
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes